plugins {
    id "io.freefair.lombok" version "8.11"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

group = 'com.reajason.javaweb.memsell'
version = '1.0-SNAPSHOT'

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

idea {
    module {
        excludeDirs -= file('build')
    }
}

def runtimeJvmArgs = [
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED',
        '--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.runtime=ALL-UNNAMED'
]

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED',
            '--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.runtime=ALL-UNNAMED'
    ]
}

tasks.withType(Test).configureEach {
    jvmArgs += runtimeJvmArgs
}

// For running the application
tasks.withType(JavaExec).configureEach {
    jvmArgs += runtimeJvmArgs
}

dependencies {
    implementation project(":common")
    implementation project(":deserialize")
    implementation project(":memshell")
    implementation project(":memshell-java8")
    implementation 'net.bytebuddy:byte-buddy:1.+'
    implementation 'javax.servlet:javax.servlet-api:3.0.1'
    implementation 'javax.websocket:javax.websocket-api:1.1'
    implementation 'org.java-websocket:Java-WebSocket:1.5.7'
    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'xalan:xalan:2.7.0'
    implementation 'org.apache.bcel:bcel:5.2'

    implementation 'commons-io:commons-io:2.+'
    implementation 'org.apache.commons:commons-lang3:3.+'
    implementation 'commons-codec:commons-codec:1.+'

    implementation 'com.squareup.okhttp3:okhttp:4.+'
    implementation 'ch.qos.logback:logback-classic:1.+'
    implementation 'com.alibaba.fastjson2:fastjson2:2.0.53'

    implementation 'org.springframework:spring-webmvc:4.3.30.RELEASE'
    implementation 'org.springframework:spring-web:4.3.30.RELEASE'
    implementation 'org.springframework:spring-webflux:5.3.24'
    implementation('org.apache.tomcat:tomcat-catalina:8.5.58') {
        exclude group: 'org.apache.tomcat', module: 'tomcat-api'
        exclude group: 'org.apache.tomcat', module: 'tomcat-juli'
        exclude group: 'org.apache.tomcat', module: 'tomcat-jni'
        exclude group: 'org.apache.tomcat', module: 'tomcat-coyote'
        exclude group: 'org.apache.tomcat', module: 'tomcat-util'
        exclude group: 'org.apache.tomcat', module: 'tomcat-util-scan'
        exclude group: 'org.apache.tomcat', module: 'tomcat-annotations-api'
        exclude group: 'org.apache.tomcat', module: 'tomcat-el-api'
        exclude group: 'org.apache.tomcat', module: 'tomcat-jsp-api'
        exclude group: 'org.apache.tomcat', module: 'tomcat-servlet-api'
        exclude group: 'org.apache.tomcat', module: 'tomcat-jaspic-api'
    }


    testImplementation platform('org.junit:junit-bom:5.+')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation "org.mockito:mockito-core:5.+"
}